--- a/windows-vs/VB_GUIapp/GUIapp.vbproj
+++ b/windows-vs/VB_GUIapp/GUIapp.vbproj
@@ -79,7 +79,6 @@
       <DependentUpon>Form1.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="hidRele.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -95,7 +94,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="UsbRelayDevice.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
@@ -124,6 +122,12 @@
     <Content Include="USB_RELAY_DEVICE.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\usb_relay-dll_cs\usb_relay-dll_cs.csproj">
+      <Project>{954766e9-e98e-4c19-8e7e-1f250b7798b8}</Project>
+      <Name>usb_relay-dll_cs</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
